# xorcyst

./: .gitignore  Makefile.am  Makefile.in  NEWS  README  TODO  astnode.c  astnode.h  astproc.c  astproc.h  codegen.c  config.h.in  configure  configure.ac  listing.c  listing.h  loc.h  objdef.h  opcode.c  opcode.h  parser.c  parser.h  parser.y  scanner.c  scanner.l  script.c  script.h  symtab.h  unit.c  xasm.c  xasm.h  xlnk.c
doc/: Assembler-Directives.html  Custom-Character-Maps.html  Error-and-Warning-Messages.html  Implementation-Details.html  Known-Bugs-and-Limitations.html  Linker-Script-Commands.html  Object-Code-Format.html  Overview.html  The-Assembler.html  The-Linker.html  What_0027s-New.html  index.html
tests/: coverage_directives_control.asm  coverage_directives_layout.asm  coverage_directives_macros_io.asm  coverage_directives_types_symbols.asm  coverage_error_directive.asm  coverage_instructions.asm  coverage_org_pure.asm  regression.sh
tests/fixtures/: charmap.txt
